fix(report): move castgc into headers, period into path
